[gd_scene load_steps=3 format=3 uid="uid://bgc878c7r31yf"]

[ext_resource type="Script" path="res://menus/pause_ui.gd" id="1_35v1f"]
[ext_resource type="PackedScene" uid="uid://gfx60wb32r42" path="res://menus/Settings.tscn" id="2_tkovu"]

[node name="pause_ui" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_35v1f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1177.0
offset_bottom = 669.0
color = Color(0, 0, 0, 0.65098)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 1152.0
offset_bottom = 650.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 46

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lanjut"
vertical_icon_alignment = 0

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Simpan"
vertical_icon_alignment = 0

[node name="Setting" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pengaturan"
vertical_icon_alignment = 0

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Kembali ke Menu"
vertical_icon_alignment = 0

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Keluar"
vertical_icon_alignment = 0

[node name="Settings" parent="MarginContainer" instance=ExtResource("2_tkovu")]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="notif" type="Node2D" parent="."]
visible = false
position = Vector2(576, 325)

[node name="Notif saved" type="ColorRect" parent="notif"]
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.733333)

[node name="ColorRect" type="ColorRect" parent="notif/Notif saved"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -45.0
offset_right = 245.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="Label" type="Label" parent="notif"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Game telah berhasil disimpan."

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/Settings/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]

[editable path="MarginContainer/Settings"]
